# NestHelper

./: .prettierignore  .prettierrc  CONTROLFLOW.md  NESTMAP.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: workflow.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: sshpass.darwin  sshpass.linux
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fetch.rs  kill_pid.rs  lib.rs  sshasset.rs
src/lib/components/: Button.svelte  Dialog.svelte  Dropdown.svelte  Editor.svelte  Flow.svelte  Input.svelte  SSHConfigurator.svelte  Table.svelte
src/lib/components/generic/: Button.svelte  Dialog.svelte  Dropdown.svelte  Input.svelte  Spinner.svelte  Table.svelte
src/lib/components/viewers/: BinaryFile.svelte  File.svelte  ImageFile.svelte
src/lib/conn/: Command.ts  FIle.ts  Flows.ts  StreamedCommand.svelte.ts  Workflow.svelte.ts
src/lib/helpers/: LocalFetch.ts  WindowCreator.ts  attempt.js  monaco.ts
src/lib/state/: states.svelte.ts
src/routes/: +layout.js  +layout.svelte  +page.svelte
src/routes/(normal)/: +layout.svelte  +page.svelte
src/routes/(normal)/(secure)/: +layout.js
src/routes/(normal)/onboarding/: +page.svelte
src/routes/(secure)/command/: +page.svelte  CommandOutput.svelte
src/routes/(secure)/files/: +page.svelte  File.svelte  Result.svelte
src/routes/(secure)/flow/: +page.svelte
src/routes/(secure)/main/: +page.svelte
src/routes/onboarding/: +page.svelte
(+10 files in other folders)
