[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["devtools"]  }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tokio = { version = "1.47.1", features = ["full"]  }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
once_cell = "1.19"
reqwest = "0.12.23"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.135", features = [ "extra_traits" ] }
exec = "0.3.1"
nix = { version = "0.27.0", features = ["poll", "signal", "term"] }
clap = "4.0.12"

[target.'cfg(windows)'.dependencies]
windows = "0.61.3"
winapi = { version = "0.3.9", features = ["winbase"] }

